<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="white">#FFFFFF</color>

    <string name="app_name">Studopoly</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="studypoly_logo_name">StydyPolyLogo</string>
    <string name="user_name">UserName</string>
    <string name="user_password">Password</string>
    <string name="db_result">Result</string>
    <string name="not_registered_text">Not Registered Yet?</string>
    <string name="title_activity_register">Register</string>
    <string name="name_given">Name</string>
    <string name="example_name">Paul</string>
    <string name="College_Name">College Name</string>
    <string name="example_username">Paul123</string>
    <string name="email_text">Email</string>
    <string name="example_email">paul@abc.edu</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="register_btn_text">Register</string>
    <string name="select_school_prompt">Select School</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="phone_example">1234567890</string>
    <string name="last_name">LastName</string>
    <string name="example_last_name">Smith</string>
    <string name="sell_your_book_btn">Sell Your Book</string>
    <string name="scan_book_btn">Scan BarCode</string>
    <string name="title_activity_sell_book">SellBook</string>
    <string name="title_activity_sell_book_details">SellBookDetails</string>
    <string name="book_title">Title</string>
    <string name="book_authors">Authors</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_published_date">Published Date</string>
    <string name="book_description">Description</string>
    <string name="book_cover_page">Cover Page</string>
    <string name="title_activity_test">Test</string>
    <string name="highlighting">Highlighting</string>
    <string name="torn_pages">Torn Pages</string>
    <string name="bent_edges">Bent Edges</string>
    <string name="quality">Quality</string>
    <string name="price">Price</string>
    <string name="comments">Comments</string>
    <string name="list_book">List Book</string>
    <string name="my_books">MyBooks</string>
    <string name="title_activity_my_books">MyBooks</string>
    <string name="title_activity_books_listed">BooksListed</string>

</resources>